--- a/style.css
+++ b/style.css
@@ -29,93 +29,6 @@ html {
   -ms-text-size-adjust: 100%; /* 2 */
 }
 
-/**
- * Remove default margin.
- */
-
-body {
-  margin: 0;
-}
-
-/* HTML5 display definitions
-   ========================================================================== */
-
-/**
- * Correct `block` display not defined for any HTML5 element in IE 8/9.
- * Correct `block` display not defined for `details` or `summary` in IE 10/11
- * and Firefox.
- * Correct `block` display not defined for `main` in IE 11.
- */
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block;
-}
-
-/**
- * 1. Correct `inline-block` display not defined in IE 8/9.
- * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
- */
-
-audio,
-canvas,
-progress,
-video {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
-}
-
-/**
- * Prevent modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS 5 devices.
- */
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-
-/**
- * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
- */
-
-[hidden],
-template {
-  display: none;
-}
-
-/* Links
-   ========================================================================== */
-
-/**
- * Remove the gray background color from active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-}
-
-/**
- * Improve readability when focused and also mouse hovered in all browsers.
- */
-
-a:active,
-a:hover {
-  outline: 0;
-}
-
 /* Text-level semantics
    ========================================================================== */
 
@@ -258,25 +171,6 @@ samp {
  * Remove most spacing between table cells.
  */
 
-/*table {
-  border-spacing: 0;
-  border-collapse: collapse;
-  width: 100%;
-  margin: 20px auto;
-}
-*/
-/*th, td {
-  border-bottom: 1px solid #bbbbbb;
-  text-align: left;
-  padding: 10px;
-}*/
-
-/*th {
-  background-color: #d9230f;
-  border-color: #d9230f;
-  color: white;
-}*/
-
 /*tr:nth-child(odd) {
   background-color: #eeeeee;
 }*/
@@ -300,10 +194,10 @@ p {
 }
 
 a {
-  color: #2879d0;
+  color: #d9230f;
 }
 a:hover {
-  color: #2268b2;
+  color: #91170a;
 }
 
 header {
@@ -392,7 +286,7 @@ pre {
 }
 pre code {
   padding: 0;
-  color: #2879d0;
+  color: #d9230f;
   background-color: #fff;
   border: none;
 }
