Updates to syllabus

--- a/_includes/style.html
+++ b/_includes/style.html
@@ -5,6 +5,10 @@ table {
     margin-bottom:10px;
 }
 
+.shortTable table {
+    width:40%;
+}
+
 thead {
     border-top: solid #DCDCDC;
     border-bottom: solid #DCDCDC;
