--- a/_includes/style.html
+++ b/_includes/style.html
@@ -5,8 +5,12 @@ table {
     margin-bottom:10px;
 }
 
-.shortTable table {
-    width:40%;
+.tableSmall table {
+    width:30%;
+}
+
+.tableMedium table {
+    width:60%;
 }
 
 thead {
