Nearly done with week 1 lecture content

--- a/_includes/style.html
+++ b/_includes/style.html
@@ -1,16 +1,24 @@
 <style type="text/css">
 
+h1{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 60px;
+}
+h2{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 50px;
+}
+h3{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 40px;
+}
+
 table {
     border-collapse: collapse;
     margin-bottom:10px;
-}
-
-.tableSmall table {
-    width:30%;
-}
-
-.tableMedium table {
-    width:60%;
 }
 
 thead {
@@ -30,8 +38,17 @@ tr:last-child {
     border-bottom: solid #DCDCDC;
 }
 
+.tableSmall table {
+    width:30%;
+}
+
+.tableMedium table {
+    width:60%;
+}
+
 body {
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 26px;
 }
 
 </style>
