--- a/_includes/style.html
+++ b/_includes/style.html
@@ -1,5 +1,7 @@
 <style type="text/css">
 
+/* General */
+
 h1{
   padding-top: 10px;
   padding-bottom: 10px;
@@ -15,40 +17,35 @@ h3{
   padding-bottom: 10px;
   line-height: 40px;
 }
-
-table {
-    border-collapse: collapse;
-    margin-bottom:10px;
-}
-
-thead {
-    border-top: solid #DCDCDC;
-    border-bottom: solid #DCDCDC;
-}
-
-tr.odd {
-    background-color: #F8F8F8;
-}
-
-tr:first-child {
-    border-top: solid #DCDCDC;
-}
-
-tr:last-child {
-    border-bottom: solid #DCDCDC;
-}
-
-.tableSmall table {
-    width:30%;
-}
-
-.tableMedium table {
-    width:60%;
-}
-
 body {
   font-size: 16px;
   line-height: 26px;
+}
+
+/* Tables */
+
+table {
+  border-collapse: collapse;
+  margin-bottom:10px;
+}
+thead {
+  border-top: solid #DCDCDC;
+  border-bottom: solid #DCDCDC;
+}
+tr.odd {
+  background-color: #F8F8F8;
+}
+tr:first-child {
+  border-top: solid #DCDCDC;
+}
+tr:last-child {
+  border-bottom: solid #DCDCDC;
+}
+.tableSmall table {
+  width:30%;
+}
+.tableMedium table {
+  width:60%;
 }
 
 </style>
