minor changes to L4.2

--- a/_includes/style.html
+++ b/_includes/style.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 
-/* General */
+/* Text */
 
 h1{
   padding-top: 10px;
@@ -20,6 +20,12 @@ h3{
 body {
   font-size: 16px;
   line-height: 26px;
+}
+
+/* Images */
+
+img {
+  padding-bottom: 10px;
 }
 
 /* Tables */
