--- a/_includes/style.html
+++ b/_includes/style.html
@@ -21,6 +21,12 @@ body {
   font-size: 16px;
   line-height: 26px;
 }
+blockquote{
+  background-color: #ecf0f1;
+  padding: 20px;
+  border: 0;
+  border-radius: 5px;
+}
 
 /* Images */
 
