--- a/classNotes/7-strings/classNotes.css
+++ b/classNotes/7-strings/classNotes.css
@@ -1,3 +1,19 @@
+pre {
+    margin: 0 0 0 0;
+    margin-top: 0.3em;
+    margin-right: 0;
+    margin-bottom: 0.3em;
+    margin-left: 0;
+}
+
+p {
+    display: block;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+}
+
 .remark-slide-content {
   background-color: #FAFAFA;
   border-top: 80px solid #23373B;
@@ -114,7 +130,7 @@ position: absolute;
   /* background: #F5F5F5; /* lighter */
   background: #e7e8e2; /* darker */
   border-radius: 3px;
-  padding: 4px;
+  padding: 0px;
 }
 
 .code10 .remark-code {
