--- a/classNotes/jhelvy.css
+++ b/classNotes/jhelvy.css
@@ -1,3 +1,57 @@
+/* ----- COPIED FROM DEFAULT ----- */
+
+a, a > code {
+  color: rgb(249, 38, 114);
+  text-decoration: none;
+}
+.footnote {
+  position: absolute;
+  bottom: 3em;
+  padding-right: 4em;
+  font-size: 90%;
+}
+.inverse h1, .inverse h2, .inverse h3 {
+  color: #f3f3f3;
+}
+.pull-left {
+  float: left;
+  width: 47%;
+}
+.pull-right {
+  float: right;
+  width: 47%;
+}
+.pull-right ~ * {
+  clear: both;
+}
+img, video, iframe {
+  max-width: 100%;
+}
+blockquote {
+  border-left: solid 5px lightgray;
+  padding-left: 1em;
+}
+.remark-slide table {
+  margin: auto;
+  border-top: 1px solid #666;
+  border-bottom: 1px solid #666;
+}
+.remark-slide table thead th { border-bottom: 1px solid #ddd; }
+th, td { padding: 5px; }
+.remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) { background: #eee }
+
+@page { margin: 0; }
+@media print {
+  .remark-slide-scaler {
+    width: 100% !important;
+    height: 100% !important;
+    transform: scale(1) !important;
+    top: 0 !important;
+    left: 0 !important;
+  }
+}
+
+
 /* ----- FONTS ----- */
 
 @import url(https://fonts.googleapis.com/css?family=Lato);
@@ -237,11 +291,9 @@ https://github.com/rstudio-education/arm-workshop-rsc2019
   color: var(--color-red);
 }
 
-
-/* highlighted code */
-
+/* Background color for highlighted code */
 .remark-code-line-highlighted {
-  background-color: rgba(97, 172, 240, .5);
+  background-color: rgba(253, 255, 50, .5);
 }
 
 /* in line code */
@@ -258,11 +310,6 @@ https://github.com/rstudio-education/arm-workshop-rsc2019
 
 .remark-code {
   color: var(--color-blue);
-}
-
-/* Background color for highlighted code */
-.remark-code-line-highlighted {
-  background-color: rgba(253, 255, 50, .5);
 }
 
 
