--- a/classNotes/13-communicating-information/classNotes.css
+++ b/classNotes/13-communicating-information/classNotes.css
@@ -1,256 +1,35 @@
-pre {
-    margin: 0 0 0 0;
-    margin-top: 0.3em;
-    margin-right: 0;
-    margin-bottom: 0.3em;
-    margin-left: 0;
-}
+@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://fonts.googleapis.com/css?family=Exo);
+@import url(https://fonts.googleapis.com/css?family=Muli:600,700,800);
+@import url('https://fonts.googleapis.com/css?family=Inconsolata:400');
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Upright:700');
 
-p {
-    display: block;
-    margin-block-start: 0.5em;
-    margin-block-end: 0.5em;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-}
+/* ----- COPIED FROM DEFAULT ----- */
+/*
+https://github.com/yihui/xaringan/blob/master/inst/rmarkdown/templates/xaringan/resources/default.css
+*/
 
-.remark-slide-content {
-  background-color: #FAFAFA;
-  border-top: 80px solid #23373B;
-  font-size: 20px;
-  font-weight: 300;
-  line-height: 1.5;
-  padding: 1em 2em 1em 2em
+a, a > code {
+  color: rgb(249, 38, 114);
+  text-decoration: none;
 }
-
-.title-slide .inverse .remark-slide-content {
-  background-color: #FAFAFA;
+.footnote {
+  position: absolute;
+  bottom: 3em;
+  padding-right: 4em;
+  font-size: 90%;
 }
+.remark-code-line-highlighted     { background-color: #ffff88; }
 
 .inverse {
-  background-color: #23373B;
-  text-shadow: none;
+  background-color: #272822;
+  color: #d6d6d6;
+  text-shadow: 0 0 20px #333;
 }
-
-.remark-slide-content > h1 {
-  font-family: 'Fira Sans';
-  font-weight: normal;
-  font-size: 45px;
-  margin-top: -95px;
-  margin-left: -00px;
-  color: #FAFAFA;
+.inverse h1, .inverse h2, .inverse h3 {
+  color: #f3f3f3;
 }
-
-.remark-slide-content > inverse {
-width: 112px;
-height: 47px;
-border-bottom: 1px solid black;
-position: absolute;
-}
-
-/* Removes colored bar from top of the slide resulting in a clear slide */
-.clear{
-  border-top: 0px solid #FAFAFA;
-}
-
-.remark-slide-content > h2, h3, h4 {
-  padding-top: -15px;
-  padding-bottom: 00px;
-  color: #1A292C;
-  text-shadow: none;
-  font-weight: 400;
-  text-align: left;
-  margin-left: 00px;
-  margin-bottom: -10px;
-}
-
-.remark-slide-content > h2, .pull-left > h2, .pull-right > h2 {
-  font-size: 35px;
-}
-
-.remark-slide-content > h3, .remark-slide-content > h4,
-.pull-left > h3, .pull-left > h4, .pull-right > h3, .pull-right > h4 {
-  font-size: 30px;
-}
-
-.title-slide {
-  background-color: #FAFAFA;
-  border-top: 80px solid #FAFAFA;
-}
-
-.title-slide > h1  {
-  color: #1A292C;
-  font-size: 40px;
-  text-shadow: none;
-  font-weight: 400;
-  text-align: left;
-  margin-left: 15px;
-  padding-top: 80px;
-}
-.title-slide > h2  {
-  margin-top: -25px;
-  padding-bottom: -20px;
-  color: #1A292C;
-  text-shadow: none;
-  font-weight: 300;
-  font-size: 35px;
-  text-align: left;
-  margin-left: 15px;
-}
-.title-slide > h3  {
-  color: #1A292C;
-  text-shadow: none;
-  font-weight: 300;
-  font-size: 25px;
-  text-align: left;
-  margin-left: 15px;
-  margin-bottom: -30px;
-}
-
-.remark-slide-number {
-  font-size: 13pt;
-  font-family: 'Fira Sans';
-  color: #272822;
-  opacity: 1;
-}
-.inverse .remark-slide-number {
-  font-size: 13pt;
-  font-family: 'Fira Sans';
-  color: #FAFAFA;
-  opacity: 1;
-}
-
-/* turns off slide numbers for title page: https://github.com/gnab/remark/issues/298 */
-.title-slide .remark-slide-number {
-  display: none;
-}
-
-.remark-inline-code {
-  color: #1A292C;
-  /* background: #F5F5F5; /* lighter */
-  background: #e7e8e2; /* darker */
-  border-radius: 3px;
-  padding: 0px;
-}
-
-.code10 .remark-code {
-  font-size: 10%;
-}
-
-.code20 .remark-code {
-  font-size: 20%;
-}
-
-.code30 .remark-code {
-  font-size: 30%;
-}
-
-.code40 .remark-code {
-  font-size: 40%;
-}
-
-.code50 .remark-code {
-  font-size: 50%;
-}
-
-.code60 .remark-code {
-  font-size: 60%;
-}
-
-.code70 .remark-code {
-  font-size: 70%;
-}
-
-.code80 .remark-code {
-  font-size: 80%;
-}
-
-.code90 .remark-code {
-  font-size: 90%;
-}
-
-.code100 .remark-code {
-  font-size: 100%;
-}
-
-.font10 {
-  font-size: 10%;
-}
-
-.font20 {
-  font-size: 20%;
-}
-
-.font30 {
-  font-size: 30%;
-}
-
-.font40 {
-  font-size: 40%;
-}
-
-.font50 {
-  font-size: 50%;
-}
-
-.font60 {
-  font-size: 60%;
-}
-
-.font70 {
-  font-size: 70%;
-}
-
-.font80 {
-  font-size: 80%;
-}
-
-.font90 {
-  font-size: 90%;
-}
-
-.font100 {
-  font-size: 100%;
-}
-
-.font110 {
-  font-size: 110%;
-}
-
-.font120 {
-  font-size: 120%;
-}
-
-.font130 {
-  font-size: 130%;
-}
-
-.font140 {
-  font-size: 140%;
-}
-
-.font150 {
-  font-size: 150%;
-}
-
-.font160 {
-  font-size: 160%;
-}
-.font170 {
-  font-size: 170%;
-}
-.font180 {
-  font-size: 180%;
-}
-.font190 {
-  font-size: 190%;
-}
-.font200 {
-  font-size: 200%;
-}
-
 /* Two-column layout */
-
 .left-column {
   color: #777;
   width: 20%;
@@ -275,4 +54,522 @@ position: absolute;
 }
 .pull-right ~ * {
   clear: both;
+}
+img, video, iframe {
+  max-width: 100%;
+}
+blockquote {
+  border-left: solid 5px lightgray;
+  padding-left: 1em;
+}
+.remark-slide table {
+  margin: auto;
+  border-top: 1px solid #666;
+  border-bottom: 1px solid #666;
+}
+.remark-slide table thead th { border-bottom: 1px solid #ddd; }
+th, td { padding: 5px; }
+.remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) { background: #eee }
+
+@page { margin: 0; }
+@media print {
+  .remark-slide-scaler {
+    width: 100% !important;
+    height: 100% !important;
+    transform: scale(1) !important;
+    top: 0 !important;
+    left: 0 !important;
+  }
+}
+
+
+/* ----- MAIN STYLING ----- */
+
+/* Primarily adapted from Allison Hill's css in this workshop:
+https://github.com/rstudio-education/arm-workshop-rsc2019
+*/
+
+:root {
+  --color-lightblue: #61acf0; /* lightblue */
+  --color-blue: #1E90FF; /* dodger blue */
+  --color-orange: #f0a561; /* orange */
+  --color-lime: #cbd20a; /* lime */
+  --color-red: #e74a2f; /* red */
+  --color-black: #1a1917; /* black */
+  --color-tan: #eae9ea; /* tan */
+  --color-gray: rgb(82, 86, 89); /* gray */
+}
+
+/* Background glow color around main slide container */
+.remark-slide-scaler {
+  -moz-box-shadow: 0 0 30px #000;
+  -webkit-box-shadow: 0 0 30px #000;
+}
+/* Background color of container behind slide */
+.remark-slide-container {
+  background-color: var(--color-gray);
+}
+/* Background color of slide */
+.remark-slide-content {
+  background-color: var(--color-tan);
+}
+
+.blue {
+  color: var(--color-blue);
+  font-size: 200%;
+  font-weight:700;
+}
+
+.orange {
+  color: var(--color-orange);
+  font-size: 200%;
+  font-weight:700;
+}
+
+.lime {
+  color: var(--color-lime);
+  font-size: 200%;
+  font-weight:700;
+}
+
+.red {
+  color: var(--color-red);
+  font-size: 200%;
+  font-weight:700;
+}
+
+.blueinline {
+  color: var(--color-blue);
+}
+
+.orangeinline {
+  color: var(--color-orange);
+}
+
+.limeinline {
+  color: var(--color-lime);
+}
+
+.redinline {
+  color: var(--color-red);
+}
+
+/* Background color for highlighted code */
+.remark-code-line-highlighted {
+  background-color: rgba(253, 255, 50, .5);
+}
+
+/* in line code */
+
+.remark-inline-code {
+  color: var(--color-blue);
+  background-color: rgb(220,220,220);
+}
+
+.inverse .remark-inline-code {
+  color: var(--color-lightblue);
+  background-color: transparent;
+}
+
+.remark-code {
+  color: var(--color-blue);
+}
+
+
+/* from emi tanaka's ninjutsu css! */
+
+.img-fill img { object-fit: fill; height:100%; width:100%; overflow: hidden;}
+.img-contain img { object-fit: contain; height:100%; width:100%;  overflow: hidden}
+.img-cover img { object-fit: cover; height:100%; width:100%;  overflow: hidden}
+.img-none img { object-fit: none; height:100%; width:100%; }
+
+/* from lucy's css!
+
+ol {
+  max-width: 350px;
+  counter-reset: my-counter;
+  list-style: none;
+  padding-left: 40px;
+}
+ol li {
+  counter-increment: my-counter;
+  position: relative;
+  margin: 20px 0;
+}
+ol li::before {
+  content: counter(my-counter);
+  color: #fff;
+  font-weight: bold;
+  position: absolute;
+  left: -60px;
+  width: 9%;
+  height: 0;
+  padding-bottom: 9%;
+  line-height: 1em;
+  margin-top: -0.5em;
+  background: var(--color-orange);
+  border-radius: 50%;
+  text-align: center;
+}
+*/
+
+.inverse {
+  background-color: var(--color-black);
+  text-shadow: 0 0 0;
+}
+
+
+/* links */
+
+a,
+a:visited {
+  color: var(--color-black);
+  border-bottom: 1px solid var(--color-blue);
+  box-shadow: inset 0 -2px 0 var(--color-blue);
+}
+
+a:hover,
+a:focus {
+  color: var(--color-black);
+  background: rgba(97, 172, 240, .5);
+  border-bottom: none;
+}
+
+a > code {
+  color: var(--color-blue);
+  text-decoration: none;
+}
+
+.inverse a {
+  color: #FFF;
+}
+
+/* from the hygge css! */
+
+.polaroid img {
+    display: block;
+    width: inherit;
+    border: 10px solid #fff;
+    border-bottom: 45px solid #fff;
+    -webkit-box-shadow: 3px 3px 3px #111;
+    -moz-box-shadow: 3px 3px 3px #111;
+    box-shadow: 3px 3px 3px #111;
+}
+
+/* footer */
+
+div.footer-large {
+    position: absolute;
+    bottom: 100px;
+    right: 50px;
+    height: 100px;
+    width: 100%;
+}
+
+div.footer-small {
+    background-color: var(--color-black);
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    height: 20px;
+    width: 100%;
+}
+
+div.footer-small span {
+    font-size: 10pt;
+    color: #F7F8FA;
+    position: absolute;
+    left: 15px;
+    bottom: 2px;
+}
+
+.remark-slide-number {
+  bottom: 18px;
+  opacity: 0.5;
+  position: absolute;
+  right: 20px;
+}
+
+img.circle {
+  border-radius:50%;
+}
+
+/* split rows*/
+
+.title-slide .remark-slide-number {
+  display: none;
+}
+
+.wrapper {
+  display: grid;
+  width: 100vw;
+  height: 100vh;
+  place-items: center;
+  place-content: center;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.top-left {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+
+.top-right {
+  grid-row: 1 / 2;
+  grid-column: 3 / 4;
+}
+
+.bottom-left {
+  grid-row: 3 / 4;
+  grid-column: 1 / 2;
+}
+
+.bottom-right {
+  grid-row: 3 / 4;
+  grid-column: 3 / 4;
+}
+
+/* https://stackoverflow.com/questions/50919104/horizontally-scrollable-output-on-xaringan-slides */
+
+pre {
+  background: transparent;
+  max-width: 100%;
+  overflow-x: auto;
+}
+
+/* Code block colors */
+.hljs-github .hljs {
+    background: #fff;
+}
+
+img.lil {
+  width: 15%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+/* Split columns */
+
+.leftcol {
+  float: left;
+  width: 49%;
+}
+.rightcol {
+  float: right;
+  width: 49%;
+}
+
+.leftcol-60 {
+  float: left;
+  width: 59%;
+}
+.rightcol-40 {
+  float: right;
+  width: 39%;
+}
+
+.leftcol-40 {
+  float: left;
+  width: 39%;
+}
+.rightcol-60 {
+  float: right;
+  width: 59%;
+}
+
+.leftcol-70 {
+  float: left;
+  width: 69%;
+}
+.rightcol-30 {
+  float: right;
+  width: 29%;
+}
+
+.leftcol-30 {
+  float: left;
+  width: 29%;
+}
+.rightcol-70 {
+  float: right;
+  width: 69%;
+}
+
+/* 3 equal columns */
+.columns3 {
+  float: left;
+  width: 32%;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* turns off slide numbers for title page: https://github.com/gnab/remark/issues/298 */
+.title-slide .remark-slide-number {
+  display: none;
+}
+
+
+
+/* ----- FONTS ----- */
+
+body {
+  font-family: 'Lato', 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif;
+}
+
+.large {
+  font-size: 160%;
+}
+
+h1, h2, h3 {
+  font-family: 'Exo';
+  font-weight: 600;
+}
+
+h2, h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+.remark-slide-content {
+  font-size: 23px;
+  padding-top: 20px;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-bottom: 20px;
+}
+
+li {
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+}
+
+.slimtitle {
+  font-family: 'Exo';
+  font-weight: 600;
+  font-size: 55px;
+  margin-block-start: 0em;
+  margin-block-end: 0.1em;
+}
+
+.inverse h1 {
+  font-family: 'Exo';
+  font-weight: 800;
+  font-size: 2.5em;
+}
+
+.remark-code, .remark-inline-code {
+  font-family: Monaco, 'Inconsolata', 'Lucida Console', monospace;
+  border-radius: 5px; /* Rounding of edges */
+}
+
+.fancy{
+  font-family: 'Cormorant Upright', serif;
+  font-weight: 700;
+}
+
+/* Additional font sizes */
+
+.code10 .remark-code {
+  font-size: 10%;
+}
+.code20 .remark-code {
+  font-size: 20%;
+}
+.code30 .remark-code {
+  font-size: 30%;
+}
+.code40 .remark-code {
+  font-size: 40%;
+}
+.code50 .remark-code {
+  font-size: 50%;
+}
+.code60 .remark-code {
+  font-size: 60%;
+}
+.code70 .remark-code {
+  font-size: 70%;
+}
+.code80 .remark-code {
+  font-size: 80%;
+}
+.code90 .remark-code {
+  font-size: 90%;
+}
+.code100 .remark-code {
+  font-size: 100%;
+}
+.font10 {
+  font-size: 10%;
+}
+.font20 {
+  font-size: 20%;
+}
+.font30 {
+  font-size: 30%;
+}
+.font40 {
+  font-size: 40%;
+}
+.font50 {
+  font-size: 50%;
+}
+.font60 {
+  font-size: 60%;
+}
+.font70 {
+  font-size: 70%;
+}
+.font80 {
+  font-size: 80%;
+}
+.font90 {
+  font-size: 90%;
+}
+.font100 {
+  font-size: 100%;
+}
+.font110 {
+  font-size: 110%;
+}
+.font120 {
+  font-size: 120%;
+}
+.font130 {
+  font-size: 130%;
+}
+.font140 {
+  font-size: 140%;
+}
+.font150 {
+  font-size: 150%;
+}
+.font160 {
+  font-size: 160%;
+}
+.font170 {
+  font-size: 170%;
+}
+.font180 {
+  font-size: 180%;
+}
+.font190 {
+  font-size: 190%;
+}
+.font200 {
+  font-size: 200%;
 }
