--- a/classNotes/classNotes.css
+++ b/classNotes/classNotes.css
@@ -4,6 +4,7 @@ https://github.com/yihui/xaringan/blob/master/inst/rmarkdown/templates/xaringan/
 */
 
 @import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://fonts.googleapis.com/css?family=Lato:bold);
 @import url(https://fonts.googleapis.com/css?family=Exo);
 @import url(https://fonts.googleapis.com/css?family=Muli:600,700,800);
 @import url('https://fonts.googleapis.com/css?family=Inconsolata:400');
@@ -358,13 +359,13 @@ h1, h2, h3 {
 }
 
 h2, h3 {
-    display: block;
-    font-size: 1.17em;
-    margin-block-start: 0.5em;
-    margin-block-end: 0.5em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
+  display: block;
+  font-size: 1.17em;
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
 
 .remark-slide-content {
